Fixing bug on Game Saving + Cleaning Code